--- a/安装/安装.md
+++ b/安装/安装.md
@@ -14,3 +14,31 @@ export PATH="$HOME/.cargo/bin:$PATH"
 rustc --version
 ```
 
+## 安装是否成功
+
+```shell
+rustc --version
+```
+
+## 第一个程序
+
+新建文件:main.rs
+
+```rust
+fn main(){
+  println!("hello world!")
+}
+```
+
+编译文件并产生main的执行文件
+
+```
+rustc main.rs
+```
+
+执行
+
+```shell
+./main
+```
+
